--- a/castle/src/main/resources/static/css/tiles.css
+++ b/castle/src/main/resources/static/css/tiles.css
@@ -1,1 +1,19 @@
 @charset "UTF-8";
+
+.header {
+	width: auto;
+    height: 72px;
+}
+
+.footer {
+	width: auto;
+    height: 100px;
+}
+
+.leftbar{
+	float:left;
+    width:25%;
+}
+.content{
+    width:100%;
+}
