--- a/castle/src/main/resources/static/css/login.css
+++ b/castle/src/main/resources/static/css/login.css
@@ -312,11 +312,11 @@ input:-webkit-autofill {
 	box-shadow: #fff 0 0 0 1000px inset
 }
 
-.login_wrap {
+/* .login_wrap {
 	width: 460px;
 	margin: 0 auto;
 	box-sizing: border-box
-}
+} */
 
 .menu_wrap {
 	display: table;
@@ -494,17 +494,17 @@ input:-webkit-autofill {
 	height: 16px
 }
 
-.panel_wrap {
+/* .panel_wrap {
 	position: relative;
 	z-index: 3;
 	margin-top: -8px
-}
+} */
 
-.panel_item {
+/* .panel_item {
 	border: 1px solid #e1e3e5;
 	border-radius: 12px;
 	background-color: #fff
-}
+} */
 
 .panel_inner {
 	padding: 24px
@@ -4075,4 +4075,113 @@ body.cafe24 .content.start_page .cafe24_content {
 	display: block;
 	margin: 0 auto 18px;
 	content: ''
+}
+
+.login {
+  background: #f6f5f7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: 'Montserrat', sans-serif;
+  height: 100vh;
+  margin: -20px 0 50px;
+}
+
+.login .login_wrap {
+	width: 550px;
+	/* margin: 0 auto; */
+	box-sizing: border-box;
+	margin-top: 2%;
+}
+
+.login .panel_wrap {
+	position: relative;
+	z-index: 3;
+	margin-top: -8px;
+	padding-left: 2rem;
+}
+
+.login .panel_item {
+	/* border: 1px solid #e1e3e5; */
+	border-radius: 12px;
+	background-color: #fff
+}
+
+.login p {
+  font-size: 14px;
+  font-weight: 100;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  margin: 20px 0 30px;
+}
+
+.login form {
+  background-color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
+}
+
+.login .container {
+  background-color: #fff;
+  border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+      0 10px 10px rgba(0,0,0,0.22);
+  position: relative;
+  overflow: hidden;
+  width: 1200px;
+  max-width: 100%;
+  min-height: 480px;
+}
+
+.login .overlay-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+
+.login .overlay {
+  background: #FF416C;
+  background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+  background: linear-gradient(to right, #FF4B2B, #FF416C);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  color: #FFFFFF;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+    transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.login .overlay-panel {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.login .overlay-right {
+  right: 0;
+  transform: translateX(0);
 }
